kopia/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: kopia-route
  namespace: kopia   
spec:
  parentRefs:
    - name: crobceratops-gateway
      namespace: gateways
    - name: crobasaurusrex-gateway
      namespace: gateways
  hostnames:
    - kopia.crobceratops.ryanbeales.com
    - kopia.crobasaurusrex.ryanbeales.com
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: kopia
          port: 51515
