kopia/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencryptcertmanager
    nginx.ingress.kubernetes.io/backend-protocol: "GRPC"
  labels:
    app.kubernetes.io/name: kopia
  name: kopia
  namespace: kopia
spec:
  ingressClassName: nginx
  rules:
    - host: kopia.crobasaurusrex.ryanbeales.com
      http:
        paths:
          - backend:
              service:
                name: kopia
                port:
                  number: 51515
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - kopia.crobasaurusrex.ryanbeales.com
      secretName: kopia-crobasaurusrex-ryanbeales-com-tls
